centered text; fixed overflow cutting off color box

--- a/src/Components/Styles/FullImage.sass
+++ b/src/Components/Styles/FullImage.sass
@@ -21,8 +21,6 @@
     padding-top: 50px
     top: 0
     left: 0
-    display: flex
-    flex-direction: column
     z-index: 2
     .sidebar-Burger
       position: absolute
@@ -36,6 +34,7 @@
       display: flex
       align-items: center
       flex-direction: column
+      text-align: center
       .title
         font-size: 1.5rem
       .link
